[package]
name = "z19_https_server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "z19_https_server"

[dependencies]
config = "=0.13.2"
actix-web = "=4.2.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "=1.0.147", features = ["derive"] }

[dependencies.sqlx]
version = "=0.5.7"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
reqwest = "=0.11.12"
